--- a/RESUME.HTML
+++ b/RESUME.HTML
@@ -5,8 +5,8 @@
     <BODY>
         <H1> RAMMOHAN SANGATI</H1>
         <h6> linkedin: www.*****************.in</h6>
-        <p>Phone: **********</p>
-        <P>Mail: ***************@gmail.com</P>
+        <H5><p>Phone: **********</p>
+        <P>Mail: ***************@gmail.com</P></H5>
         <h3>------------------------------------------------------------------------------</h3>
         <H3> CAREER OBJECTIVE</H3>  
         <P>To get an opportunity where I can make best of my potential, build a valuable skill set and contribute to the 
@@ -28,10 +28,10 @@
         >> Browsing
         </Pre></p> 
         <h3>PROJECTS</h3>
-        <P><H7>TITLE:</H7> Vehicle to vehicle Communication Using CAN ProtocoL</P>
-      <P> <h7>GIST:</h7> Vehicle-to-Vehicle Communication allows vehicles to exchange information, like speed and 
+        <H7><P>TITLE: Vehicle to vehicle Communication Using CAN ProtocoL</P></H7>
+      <h7><P>GIST: Vehicle-to-Vehicle Communication allows vehicles to exchange information, like speed and 
         location, using the CAN protocol, which stands for Controller Area Network. It helps improve 
-        road safety and enables features like collision avoidance.</P>
+        road safety and enables features like collision avoidance.</P><H7>
         <H4><PRE>
         Date: 3/Aug/2024
         Place: Hyd
