--- a/RESUME.HTML
+++ b/RESUME.HTML
@@ -12,15 +12,15 @@
         <P>To get an opportunity where I can make best of my potential, build a valuable skill set and contribute to the 
             organization’s growth to next level. </P>
         <H3> SKILLS</H3>
-        <PRE>  
+        <P><PRE>  
         1. Python
-        2. SQL</PRE>
+        2. SQL</PRE></P>
         <h3> EDUCATION</h3>
-        <PRE>
+        <P><PRE>
         -> B.Tech in NRCM
         -> +2 in S C J 
         -> SSC in Adarsha
-        </PRE>
+        </PRE></P>
         <h3> HOBBIES</h3>
        <p><Pre>
         >> Cricket
