--- a/RESUME.HTML
+++ b/RESUME.HTML
@@ -12,21 +12,21 @@
         <P>To get an opportunity where I can make best of my potential, build a valuable skill set and contribute to the 
             organization’s growth to next level. </P>
         <H3> SKILLS</H3>
-        <P><PRE>  
+        <P><PRE><<H4>  
         1. Python
-        2. SQL</PRE></P>
+        2. SQL</H4></PRE></P>
         <h3> EDUCATION</h3>
-        <P><PRE>
+        <P><PRE><H4>
         -> B.Tech in NRCM
         -> +2 in S C J 
         -> SSC in Adarsha
-        </PRE></P>
+        </H4></PRE></P>
         <h3> HOBBIES</h3>
-       <p><Pre>
+       <p><Pre><H4>
         >> Cricket
         >> Music
         >> Browsing
-        </Pre></p> 
+        <H4></Pre></p> 
         <h3>PROJECTS</h3>
         <H7><P>TITLE: Vehicle to vehicle Communication Using CAN ProtocoL</P></H7>
       <h7><P>GIST: Vehicle-to-Vehicle Communication allows vehicles to exchange information, like speed and 
